# mexl-rs

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
crates/mexl/: Cargo.toml
crates/mexl/src/: ast.rs  builtin.rs  code.rs  compiler.rs  environment.rs  error.rs  lexer.rs  lib.rs  object.rs  parser.rs  token.rs  vm.rs
crates/mexl/src/tests/: fixtures.rs
crates/wasi/: Cargo.toml
crates/wasi-unknown/: Cargo.toml
crates/wasi-unknown/src/: module.rs
crates/wasi-unknown/tests/: wasi_integration.rs
crates/wasi/src/: lib.rs  module.rs
crates/wasi/tests/: integration.rs
crates/wasi/wit/: mexl-wasi.wit
src/: ast.rs  builtin.rs  code.rs  compiler.rs  environment.rs  error.rs  lexer.rs  lib.rs  object.rs  parser.rs  token.rs  vm.rs
src/tests/: fixtures.rs
